# logging-effect-gogol

./: README.md  logging-effect-gogol.cabal  stack.yaml
src/Control/Monad/Log/: Gogol.hs
