name:                logging-effect-gogol
version:             0.1.0.0
synopsis:            Google backend for logging-effect
description:         Google backend for logging-effect
homepage:            https://github.com/unfoldml/logging-effect-gogol
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          oss@unfoldml.com
copyright:           2021 UnfoldML AB
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.8.3

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Log.Gogol
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , exceptions
                     , gogol
                     , gogol-core >= 0.5.0
                     , gogol-logging
                     , lens
                     , logging-effect
                     , servant < 0.17
                     , text
                     , unordered-containers

-- test-suite spec
--   default-language:    Haskell2010
--   ghc-options:         -Wall
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , logging-effect-gogol
--                      , hspec
--                      , QuickCheck

source-repository head
  type:     git
  location: https://github.com/unfoldml/logging-effect-gogol
